// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ResultList default 1`] = `
<div
  className="root-0-2-1"
>
  <div
    className="tdm-calculation-metrics-panel"
  >
    <h3>
      Req'd Parking
    </h3>
    <div />
    <div>
       
      spcs
    </div>
  </div>
  <div
    className="tdm-calculation-metrics-panel"
  >
    <h3>
      Parking Requirement - Residential
    </h3>
    <div />
    <div>
       
      spcs
    </div>
  </div>
  <div
    className="tdm-calculation-metrics-panel"
  >
    <h3>
      Target Points
    </h3>
    <div />
    <div>
       
      pts
    </div>
  </div>
  <div
    className="tdm-calculation-metrics-panel"
  >
    <h3>
      Parking Requirement - Hotel
    </h3>
    <div />
    <div>
       
      spcs
    </div>
  </div>
</div>
`;

exports[`Storyshots ResultView default 1`] = `
<div
  className="tdm-calculation-metrics-panel"
>
  <h3>
    Target Points
  </h3>
  <div>
    -1
  </div>
  <div>
     
    pts
  </div>
</div>
`;

exports[`Storyshots RuleInput default Input Boolean (False) 1`] = `
<div
  className="rule-0-2-3"
>
  <div
    className="name-0-2-5"
  >
    Pricing/Unbundling
  </div>
  <input
    checked={false}
    className="code-0-2-7"
    name="STRATEGY_PARKING_1"
    onChange={[Function]}
    type="checkbox"
    value={true}
  />
  <div
    className="units-0-2-8"
  >
    
  </div>
  <div
    className="calcUnits-0-2-9"
  >
     
  </div>
</div>
`;

exports[`Storyshots RuleInput default Input Boolean (True) 1`] = `
<div
  className="rule-0-2-3"
>
  <div
    className="name-0-2-5"
  >
    Pricing/Unbundling
  </div>
  <input
    checked={true}
    className="code-0-2-7"
    name="STRATEGY_PARKING_1"
    onChange={[Function]}
    type="checkbox"
    value={true}
  />
  <div
    className="units-0-2-8"
  >
    
  </div>
  <div
    className="calcUnits-0-2-9"
  >
     
  </div>
</div>
`;

exports[`Storyshots RuleInput default Input Number 1`] = `
<div
  className="rule-0-2-3 numberRule-0-2-4"
>
  <div
    className="name-0-2-5"
  >
    Sq Ft - Retail
  </div>
  <input
    className="code-0-2-7"
    name="SF_RETAIL"
    onChange={[Function]}
    type="text"
    value=""
  />
  <div
    className="units-0-2-8"
  >
    sq ft
  </div>
  <div
    className="calcUnits-0-2-9"
  >
     
  </div>
</div>
`;

exports[`Storyshots RuleList default 1`] = `
<div
  className="root-0-2-12"
>
  <div
    className="rule-0-2-3 numberRule-0-2-4"
  >
    <div
      className="name-0-2-5"
    >
      # Habitable Rooms &lt; 3
    </div>
    <input
      className="code-0-2-7"
      name="UNITS_HABIT_LT3"
      onChange={[Function]}
      type="text"
      value=""
    />
    <div
      className="units-0-2-8"
    >
      dwelling units
    </div>
    <div
      className="calcUnits-0-2-9"
    >
       
    </div>
  </div>
  <div
    className="rule-0-2-3 numberRule-0-2-4"
  >
    <div
      className="name-0-2-5"
    >
      # Habitable Rooms = 3
    </div>
    <input
      className="code-0-2-7"
      name="UNITS_HABIT_3"
      onChange={[Function]}
      type="text"
      value=""
    />
    <div
      className="units-0-2-8"
    >
      dwelling units
    </div>
    <div
      className="calcUnits-0-2-9"
    >
       
    </div>
  </div>
  <div
    className="rule-0-2-3 numberRule-0-2-4"
  >
    <div
      className="name-0-2-5"
    >
      # Habitable Rooms &gt; 3
    </div>
    <input
      className="code-0-2-7"
      name="UNITS_HABIT_GT3"
      onChange={[Function]}
      type="text"
      value=""
    />
    <div
      className="units-0-2-8"
    >
      dwelling units
    </div>
    <div
      className="calcUnits-0-2-9"
    >
       
    </div>
  </div>
  <div
    className="rule-0-2-3 numberRule-0-2-4"
  >
    <div
      className="name-0-2-5"
    >
      Condo - Units
    </div>
    <input
      className="code-0-2-7"
      name="UNITS_CONDO"
      onChange={[Function]}
      type="text"
      value=""
    />
    <div
      className="units-0-2-8"
    >
      dwelling units
    </div>
    <div
      className="calcUnits-0-2-9"
    >
       
    </div>
  </div>
  <div
    className="rule-0-2-3 numberRule-0-2-4"
  >
    <div
      className="name-0-2-5"
    >
      Condo - Enter Parking Space Req'd
    </div>
    <input
      className="code-0-2-7"
      name="PARK_CONDO"
      onChange={[Function]}
      type="text"
      value=""
    />
    <div
      className="units-0-2-8"
    >
      spcs
    </div>
    <div
      className="calcUnits-0-2-9"
    >
       
    </div>
  </div>
</div>
`;

exports[`Storyshots RulePanels default 1`] = `
Array [
  <div
    className="panel-0-2-13"
  >
    <fieldset>
      <legend
        className="legend-0-2-14"
      >
        Residential Inputs
      </legend>
      <div
        className="root-0-2-12"
      >
        <div
          className="rule-0-2-3 numberRule-0-2-4"
        >
          <div
            className="name-0-2-5"
          >
            # Habitable Rooms &lt; 3
          </div>
          <input
            className="code-0-2-7"
            name="UNITS_HABIT_LT3"
            onChange={[Function]}
            type="text"
            value=""
          />
          <div
            className="units-0-2-8"
          >
            dwelling units
          </div>
          <div
            className="calcUnits-0-2-9"
          >
             
          </div>
        </div>
        <div
          className="rule-0-2-3 numberRule-0-2-4"
        >
          <div
            className="name-0-2-5"
          >
            # Habitable Rooms = 3
          </div>
          <input
            className="code-0-2-7"
            name="UNITS_HABIT_3"
            onChange={[Function]}
            type="text"
            value=""
          />
          <div
            className="units-0-2-8"
          >
            dwelling units
          </div>
          <div
            className="calcUnits-0-2-9"
          >
             
          </div>
        </div>
        <div
          className="rule-0-2-3 numberRule-0-2-4"
        >
          <div
            className="name-0-2-5"
          >
            # Habitable Rooms &gt; 3
          </div>
          <input
            className="code-0-2-7"
            name="UNITS_HABIT_GT3"
            onChange={[Function]}
            type="text"
            value=""
          />
          <div
            className="units-0-2-8"
          >
            dwelling units
          </div>
          <div
            className="calcUnits-0-2-9"
          >
             
          </div>
        </div>
        <div
          className="rule-0-2-3 numberRule-0-2-4"
        >
          <div
            className="name-0-2-5"
          >
            Condo - Units
          </div>
          <input
            className="code-0-2-7"
            name="UNITS_CONDO"
            onChange={[Function]}
            type="text"
            value=""
          />
          <div
            className="units-0-2-8"
          >
            dwelling units
          </div>
          <div
            className="calcUnits-0-2-9"
          >
             
          </div>
        </div>
        <div
          className="rule-0-2-3 numberRule-0-2-4"
        >
          <div
            className="name-0-2-5"
          >
            Condo - Enter Parking Space Req'd
          </div>
          <input
            className="code-0-2-7"
            name="PARK_CONDO"
            onChange={[Function]}
            type="text"
            value=""
          />
          <div
            className="units-0-2-8"
          >
            spcs
          </div>
          <div
            className="calcUnits-0-2-9"
          >
             
          </div>
        </div>
      </div>
    </fieldset>
  </div>,
  <div
    className="panel-0-2-13"
  >
    <fieldset>
      <legend
        className="legend-0-2-14"
      >
        Commercial Inputs
      </legend>
      <div
        className="root-0-2-12"
      >
        <div
          className="rule-0-2-3 numberRule-0-2-4"
        >
          <div
            className="name-0-2-5"
          >
            Sq Ft - Restaurant/Bar/General
          </div>
          <input
            className="code-0-2-7"
            name="SF_RESTAURANT"
            onChange={[Function]}
            type="text"
            value=""
          />
          <div
            className="units-0-2-8"
          >
            sq ft
          </div>
          <div
            className="calcUnits-0-2-9"
          >
             
          </div>
        </div>
        <div
          className="rule-0-2-3 numberRule-0-2-4"
        >
          <div
            className="name-0-2-5"
          >
            Sq Ft - Health Club
          </div>
          <input
            className="code-0-2-7"
            name="SF_HEALTH_CLUB"
            onChange={[Function]}
            type="text"
            value=""
          />
          <div
            className="units-0-2-8"
          >
            sq ft
          </div>
          <div
            className="calcUnits-0-2-9"
          >
             
          </div>
        </div>
        <div
          className="rule-0-2-3 numberRule-0-2-4"
        >
          <div
            className="name-0-2-5"
          >
            Sq Ft - Take-out Restaurant
          </div>
          <input
            className="code-0-2-7"
            name="SF_RESTAURANT_TAKEOUT"
            onChange={[Function]}
            type="text"
            value=""
          />
          <div
            className="units-0-2-8"
          >
            sq ft
          </div>
          <div
            className="calcUnits-0-2-9"
          >
             
          </div>
        </div>
        <div
          className="rule-0-2-3 numberRule-0-2-4"
        >
          <div
            className="name-0-2-5"
          >
            Sq Ft - Office, Business, Manufacturing, Industrial
          </div>
          <input
            className="code-0-2-7"
            name="SF_OFFICE"
            onChange={[Function]}
            type="text"
            value=""
          />
          <div
            className="units-0-2-8"
          >
            sq ft
          </div>
          <div
            className="calcUnits-0-2-9"
          >
             
          </div>
        </div>
        <div
          className="rule-0-2-3 numberRule-0-2-4"
        >
          <div
            className="name-0-2-5"
          >
            Sq Ft - Warehouse
          </div>
          <input
            className="code-0-2-7"
            name="SF_WAREHOUSE"
            onChange={[Function]}
            type="text"
            value=""
          />
          <div
            className="units-0-2-8"
          >
            sq ft
          </div>
          <div
            className="calcUnits-0-2-9"
          >
             
          </div>
        </div>
      </div>
    </fieldset>
  </div>,
  <div
    className="panel-0-2-13"
  >
    <fieldset>
      <legend
        className="legend-0-2-14"
      >
        Institutional Inputs
      </legend>
      <div
        className="root-0-2-12"
      >
        <div
          className="rule-0-2-3 numberRule-0-2-4"
        >
          <div
            className="name-0-2-5"
          >
            Sq Ft - Medical Offices, Clinics, Service Facilities
          </div>
          <input
            className="code-0-2-7"
            name="SF_INST_MEDICAL_SVC"
            onChange={[Function]}
            type="text"
            value=""
          />
          <div
            className="units-0-2-8"
          >
            sq ft
          </div>
          <div
            className="calcUnits-0-2-9"
          >
             
          </div>
        </div>
        <div
          className="rule-0-2-3 numberRule-0-2-4"
        >
          <div
            className="name-0-2-5"
          >
            Sq Ft - Other Institutional
          </div>
          <input
            className="code-0-2-7"
            name="SF_INST_OTHER"
            onChange={[Function]}
            type="text"
            value=""
          />
          <div
            className="units-0-2-8"
          >
            sq ft
          </div>
          <div
            className="calcUnits-0-2-9"
          >
             
          </div>
        </div>
        <div
          className="rule-0-2-3 numberRule-0-2-4"
        >
          <div
            className="name-0-2-5"
          >
            Sq Ft - Government Institution
          </div>
          <input
            className="code-0-2-7"
            name="SF_INST_GOV"
            onChange={[Function]}
            type="text"
            value=""
          />
          <div
            className="units-0-2-8"
          >
            sq ft
          </div>
          <div
            className="calcUnits-0-2-9"
          >
             
          </div>
        </div>
        <div
          className="rule-0-2-3 numberRule-0-2-4"
        >
          <div
            className="name-0-2-5"
          >
            Patient Hospital Beds
          </div>
          <input
            className="code-0-2-7"
            name="BED_HOSPITAL"
            onChange={[Function]}
            type="text"
            value=""
          />
          <div
            className="units-0-2-8"
          >
            beds
          </div>
          <div
            className="calcUnits-0-2-9"
          >
             
          </div>
        </div>
        <div
          className="rule-0-2-3 numberRule-0-2-4"
        >
          <div
            className="name-0-2-5"
          >
            Convalescent Institution Beds
          </div>
          <input
            className="code-0-2-7"
            name="BED_CONVALESCENT"
            onChange={[Function]}
            type="text"
            value=""
          />
          <div
            className="units-0-2-8"
          >
            beds
          </div>
          <div
            className="calcUnits-0-2-9"
          >
             
          </div>
        </div>
      </div>
    </fieldset>
  </div>,
  <div
    className="panel-0-2-13"
  >
    <fieldset>
      <legend
        className="legend-0-2-14"
      >
        Other Land Use Inputs
      </legend>
      <div
        className="root-0-2-12"
      >
        <div
          className="rule-0-2-3 numberRule-0-2-4"
        >
          <div
            className="name-0-2-5"
          >
            # Seats - Auditorium
          </div>
          <input
            className="code-0-2-7"
            name="SEAT_AUDITORIUM"
            onChange={[Function]}
            type="text"
            value=""
          />
          <div
            className="units-0-2-8"
          >
            seats
          </div>
          <div
            className="calcUnits-0-2-9"
          >
             
          </div>
        </div>
        <div
          className="rule-0-2-3 numberRule-0-2-4"
        >
          <div
            className="name-0-2-5"
          >
            Sq Ft - Auditorium w/o Seats
          </div>
          <input
            className="code-0-2-7"
            name="SF_AUDITORIUM_NO_SEATS"
            onChange={[Function]}
            type="text"
            value=""
          />
          <div
            className="units-0-2-8"
          >
            sq ft
          </div>
          <div
            className="calcUnits-0-2-9"
          >
             
          </div>
        </div>
      </div>
    </fieldset>
  </div>,
]
`;

exports[`Storyshots Sidebar default 1`] = `
<div
  className="container-0-2-45"
>
  <div />
  <div>
    <div
      className="links-0-2-46"
    >
      <a
        className="link-0-2-47"
        href="/"
        onClick={[Function]}
      >
         
        Terms and Conditions
      </a>
      <div>
        |
      </div>
      <a
        className="link-0-2-47"
        href="/"
        onClick={[Function]}
      >
         
        Privacy Policy
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots SwitchViewButton default 1`] = `
<button
  className="root-0-2-23"
  onClick={[Function]}
>
  Switch View Button Label
</button>
`;

exports[`Storyshots TdmCalculation default 1`] = `
<div
  className="root-0-2-15"
>
  <div
    className="container-0-2-16"
  >
    <div
      className="switchButtonWrapper-0-2-17"
    >
      <div
        className="switchButton-0-2-18"
      >
        <button
          className="root-0-2-23"
        >
          Switch to Wizard View
        </button>
      </div>
      <div
        className="root-0-2-1"
      >
        <div
          className="tdm-calculation-metrics-panel"
        >
          <h3>
            A + B
          </h3>
          <div>
            21
          </div>
          <div>
             
            beans
          </div>
        </div>
        <div
          className="tdm-calculation-metrics-panel"
        >
          <h3>
            A * B
          </h3>
          <div>
            68
          </div>
          <div>
             
            beans
          </div>
        </div>
        <div
          className="tdm-calculation-metrics-panel"
        >
          <h3>
            Hypotenuse of Triangle with Sides A and B
          </h3>
          <div>
            17.46424919657298
          </div>
          <div>
             
            beans
          </div>
        </div>
      </div>
    </div>
    <div
      className="rulePanelWrapper-0-2-19"
    >
      <div
        className="rulePanel-0-2-20"
      >
        <h2>
          Project Parameters
        </h2>
        <div
          className="panel-0-2-13"
        >
          <fieldset>
            <legend
              className="legend-0-2-14"
            />
            <div
              className="root-0-2-12"
            >
              <div
                className="rule-0-2-3 numberRule-0-2-4"
              >
                <div
                  className="name-0-2-5"
                >
                  Input Integer A
                </div>
                <input
                  className="code-0-2-7"
                  name="INPUT_INTEGER_A"
                  onChange={[Function]}
                  type="text"
                  value={4}
                />
                <div
                  className="units-0-2-8"
                >
                  beans
                </div>
                <div
                  className="calcUnits-0-2-9"
                >
                   
                </div>
              </div>
              <div
                className="rule-0-2-3 numberRule-0-2-4"
              >
                <div
                  className="name-0-2-5"
                >
                  Input Integer B
                </div>
                <input
                  className="code-0-2-7"
                  name="INPUT_INTEGER_B"
                  onChange={[Function]}
                  type="text"
                  value={17}
                />
                <div
                  className="units-0-2-8"
                >
                  beans
                </div>
                <div
                  className="calcUnits-0-2-9"
                >
                   
                </div>
              </div>
            </div>
          </fieldset>
        </div>
      </div>
      <div
        className="transportDemandStrategies-0-2-21"
      >
        <h2>
           Transportation Demand Strategies
        </h2>
        <div
          sclassName="buttonWrapper-0-2-22"
        >
          &gt;
          <button
            className="tdm-wizard-pkg-button"
            onClick={[Function]}
          >
            Reset All Strategies
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots WizardNavButton disabled 1`] = `
<div
  className="tdm-wizard-nav-button-disabled"
>
  Wizard Nav Button Label
</div>
`;

exports[`Storyshots WizardNavButton enabled 1`] = `
<div
  className="tdm-wizard-nav-button"
  onClick={[Function]}
>
  Wizard Nav Button Label
</div>
`;

exports[`Storyshots WizardRuleInput default Input Boolean (False) 1`] = `
Array [
  <div
    className="field-0-2-24 checkboxFieldWrapper-0-2-31"
  >
    <div
      className="checkboxFieldLabel-0-2-32"
    >
      Pricing/Unbundling
    </div>
    <input
      checked={false}
      className="checkbox-0-2-33"
      name="STRATEGY_PARKING_1"
      onChange={[Function]}
      type="checkbox"
      value={true}
    />
  </div>,
  <div
    className="textInputLabel-0-2-41 errorLabel-0-2-44"
  >
    
  </div>,
]
`;

exports[`Storyshots WizardRuleInput default Input Boolean (True) 1`] = `
Array [
  <div
    className="field-0-2-24 checkboxFieldWrapper-0-2-31"
  >
    <div
      className="checkboxFieldLabel-0-2-32"
    >
      Pricing/Unbundling
    </div>
    <input
      checked={true}
      className="checkbox-0-2-33"
      name="STRATEGY_PARKING_1"
      onChange={[Function]}
      type="checkbox"
      value={true}
    />
  </div>,
  <div
    className="textInputLabel-0-2-41 errorLabel-0-2-44"
  >
    
  </div>,
]
`;

exports[`Storyshots WizardRuleInput default Input Number 1`] = `
Array [
  <div
    className="field-0-2-24 numberFieldWrapper-0-2-25"
  >
    <div
      className="textInputLabel-0-2-41"
    >
      Sq Ft - Retail
    </div>
    <div
      className="numberField-0-2-26"
    >
      <input
        className="input-0-2-28"
        max={null}
        min={null}
        name="SF_RETAIL"
        onChange={[Function]}
        type="text"
        value=""
      />
    </div>
    <div
      className="numberFieldUnits-0-2-27"
    >
      sq ft
    </div>
    <div
      className="calcUnitsCaption-0-2-30"
    >
       
    </div>
  </div>,
  <div
    className="textInputLabel-0-2-41 errorLabel-0-2-44"
  >
    
  </div>,
]
`;
